<resources>
    <string name="app_name">同学+</string>
    <string name="fragment_btn_week">第-周</string>
    <string name="fragment_tv_course">课程表</string>
    <string name="fragment_tv_me">我的</string>
    <string name="fragment_me_tv_landing">请点击登录</string>
    <string name="fragment_me_tv_exit">退出</string>
    <string name="fragment_me_tv_about">关于</string>
    <string name="fragment_me_tv_help">帮助</string>
    <string name="view_exit_login">清除账户信息</string>
    <string name="layout_course_btn_time_table">作息表</string>
    <string name="title_general_back">返回</string>
    <string name="fragment_me_tv_setting">设置</string>
    <string name="pop_course_menu_tv_get_data">获取课程表</string>
    <string name="pop_course_menu_tv_time_table">作息时间表</string>
    <string name="my_lean_item_name">课程名称：</string>
    <string name="my_lean_item_score">学分：</string>
    <string name="my_lean_item_state">成绩：</string>
    <string name="my_lean_item_type">课程类型：</string>
    <string name="my_lean_item_semester">学年学期：</string>
    <string name="activity_login_tv_title">登录</string>
    <string name="activity_login_edt_account">请输入学号</string>
    <string name="activity_login_btn_landing">登录</string>
    <string name="activity_login_edt_password">请输入密码</string>
    <string name="activity_info_tv_name">姓名</string>
    <string name="activity_info_tv_sex">性别</string>
    <string name="activity_info_tv_nation">民族</string>
    <string name="activity_info_weight">体重</string>
    <string name="activity_info_height">身高</string>
    <string name="activity_info_squad">班级</string>
    <string name="activity_info_grade">年级</string>
    <string name="activity_info_id">学号</string>
    <string name="activity_info_phone">手机</string>
    <string name="activity_info_professional">专业</string>
    <string name="activity_info_college">学院</string>
    <string name="activity_info_bornDate">出生日期</string>
    <string name="activity_info_entranceTime">入学时间</string>
    <string name="activity_info_homeAddress">家庭地址</string>
    <string name="activity_info_btn_exit">退出登录</string>
    <string name="activity_info_tv_state">在读状态</string>
    <string name="activity_login_tv_memorization_password">记住密码</string>
    <string name="activity_login_automatic_login">自动登录</string>
    <string name="activity_info_tv_title">个人信息</string>
    <string name="activity_time_table_tv_title">作息时间表</string>
    <string name="activity_time_table_title">柳州职业技术学院教学作息时间表</string>
    <string name="activity_time_table_project">项目</string>
    <string name="activity_time_table_time">教学时间</string>
    <string name="activity_time_table_forenoon">上午</string>
    <string name="activity_time_table_one">第一节</string>
    <string name="activity_time_table_time_1">8:00–8:40</string>
    <string name="activity_time_table_two">第二节</string>
    <string name="activity_time_table_time_2">8:50–9:30</string>
    <string name="activity_time_table_three">第三节</string>
    <string name="activity_time_table_time_3">9:50–10:30</string>
    <string name="activity_time_table_four">第四节</string>
    <string name="activity_time_table_time_4">10:40–11:20</string>
    <string name="activity_time_table_five">第五节</string>
    <string name="activity_time_table_time_5">11:30–12:10</string>
    <string name="activity_time_table_nooning">中午</string>
    <string name="activity_time_table_six">第六节</string>
    <string name="activity_time_table_time_6">13:00–13:40</string>
    <string name="activity_time_table_time_7">第七节</string>
    <string name="activity_time_table_seven">13:50–14:30</string>
    <string name="activity_time_table_afternoon">下午</string>
    <string name="activity_time_table_eight">第八节</string>
    <string name="activity_time_table_time_8">15:00–15:40</string>
    <string name="activity_time_table_nine">第九节</string>
    <string name="activity_time_table_time_9">15:50–16:30</string>
    <string name="activity_time_table_ten">第十节</string>
    <string name="activity_time_table_10">16:40–17:20</string>
    <string name="activity_time_table_eleven">第十一节</string>
    <string name="activity_time_table_11">17:30–18:10</string>
    <string name="activity_time_table_night">晚上</string>
    <string name="activity_time_table_twelve">第十二节</string>
    <string name="activity_time_table_12">19:30–20:10</string>
    <string name="activity_time_table_thirteen">第十三节</string>
    <string name="activity_time_table_13">20:20–21:00</string>
    <string name="activity_time_table_fourteen">第十四节</string>
    <string name="activity_time_table_14">21:10–21:50</string>
    <string name="fragment_attendance_btn_connect_hint">连接教师端</string>
    <string name="activity_setting_tv_table">表格模式</string>
    <string name="activity_help_tv_ask_2">问：怎么获取课程表？</string>
    <string name="activity_help_tv_ask_3">问：怎么登陆？</string>
    <string name="activity_help_tv_ask_4">问：怎么切换表格模式？</string>
     <string name="activity_help_tv_answer_2">答：在课程表界面点击右上角的图标后点击“获取课程表”</string>
    <string name="activity_help_tv_answer_3">答：点击“我的”的第一个选项进入登陆界面输入学号密码点击“登录”即可</string>
    <string name="activity_help_tv_answer_4">答：点击“我的”的“设置”选项的“表格模式”</string>
    <string name="item_comp_title_1">时间：</string>
    <string name="item_comp_title_2">存扣分原因:</string>
    <string name="item_comp_title_3">存或扣:</string>
    <string name="item_comp_title_4">分值:</string>
    <string name="item_comp_title_5">备注:</string>
    <string name="fragment_course_tv_hint">无课程表信息，请点击右上角图标的获取课程表</string>
    <string name="activity_start_tv">欢迎使用</string>
    <string name="activity_setting_tv_refresh">实时刷新课程表</string>
    <integer name="TAG_KEY_IV_ATTR">0</integer>
    <integer name="TAG_KEY_IV_COU">1</integer>
    <integer name="TAG_KEY_IV_ME">2</integer>
    <integer name="TAG_KEY_TV_ATTR">3</integer>
    <integer name="TAG_KEY_TV_COU">4</integer>
    <integer name="TAG_KEY_TV_ME">5</integer>
</resources>
