<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_help_toolbar"
        android:elevation="5dp"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/activity_help_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/fragment_me_tv_help"
                android:textColor="@color/colorGeneralText"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/activity_help_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/action_general_back_state"
                android:clickable="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/action_general_iv_menu"
                    android:layout_width="25dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center|left"
                    android:background="@null"
                    android:contentDescription="@string/title_general_back"
                    android:paddingLeft="11dp"
                    android:src="@drawable/ic_general_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_general_back"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </LinearLayout>

        </FrameLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#fcc1a2"
            android:orientation="vertical">


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#b3fce656"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_help_tv_ask_2"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_help_tv_answer_2"
                android:textColor="@android:color/black" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#aa83f520"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_help_tv_ask_3"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_help_tv_answer_3"
                android:textColor="@android:color/black" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#9e74d9fd"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_help_tv_ask_4"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_help_tv_answer_4"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>