<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGeneraActionBackground"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/activity_login_edt_account"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edt_login_selector"
                android:hint="@string/activity_login_edt_account"
                android:maxLength="15" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:background="#e6e6e6" />

            <EditText
                android:id="@+id/activity_login_edt_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edt_login_selector"
                android:hint="@string/activity_login_edt_password"
                android:inputType="textPassword"
                android:maxLength="15" />

            <Button
                android:id="@+id/activity_login_btn_landing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_login_selector"
                android:text="@string/activity_login_btn_landing"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/activity_login_cb_memorization_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_login_tv_memorization_password" />


            <CheckBox
                android:id="@+id/activity_login_cb_automatic_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/activity_login_automatic_login" />

        </FrameLayout>
    </LinearLayout>
</LinearLayout>